--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -2,11 +2,6 @@ name: Spell Checker 2
 
 on: [pull_request]
 
-permissions:
-  checks: write
-  contents: read
-  pull-requests: write
-
 jobs:
   spell_checking:
     name: runner / LanguageTools
@@ -17,11 +12,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Review dog languagetool
+        id: "review"
         uses: reviewdog/action-languagetool@v1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-          reporter: "github-pr-review"
+          reporter: "github-pr-check"
           # Change reporter level if you need.
           level: "error"
           patterns: "**/*.md **/*.txt **/*.mdx"
