use github-pr-annotations

--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-          reporter: "github-pr-check"
+          reporter: "github-pr-annotations"
           # Change reporter level if you need.
           level: "error"
           patterns: "**/*.md **/*.txt **/*.mdx"
