--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -16,27 +16,41 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Run your tests/build or script
+      - name: Run your build or tests
+        id: run_tests
         run: |
           # Example of generating error annotations
           echo "::error file=example.txt,line=1::An error occurred in the build"
           echo "::warning file=example.txt,line=2::This is a warning"
-          # Simulate a test or build failure (exit 1)
+          # Simulate a test or build failure (exit 0)
           exit 0  # Change this based on your script
 
-      - name: Check for error annotations
+      - name: Check for error annotations in logs
         id: check_annotations
-        run: |
-          # Check for any `::error` annotations in the logs
-          if grep -q '::error' $GITHUB_ENV; then
-            echo "Error annotations found!"
-            exit 1
-          else
-            echo "No error annotations found."
-          fi
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const logs = await github.actions.listJobsForWorkflowRun({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              run_id: context.runId
+            });
 
-      - name: Continue if no error
-        run: echo "Workflow continued successfully."
+            const job = logs.data.jobs.find(j => j.name === 'build');
+            const jobLogs = await github.actions.downloadJobLogs({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              job_id: job.id
+            });
+
+            const errorAnnotations = jobLogs.data.some(log => log.includes('::error::'));
+
+            if (errorAnnotations) {
+              core.setFailed("Error annotations found in logs!");
+            } else {
+              console.log("No error annotations found.");
+            }
+
 # name: Spell Checker 2
 
 # on: [pull_request]
