--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -27,29 +27,10 @@ jobs:
 
       - name: Check for error annotations in logs
         id: check_annotations
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const logs = await github.actions.listJobsForWorkflowRun({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              run_id: context.runId
-            });
-
-            const job = logs.data.jobs.find(j => j.name === 'build');
-            const jobLogs = await github.actions.downloadJobLogs({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              job_id: job.id
-            });
-
-            const errorAnnotations = jobLogs.data.some(log => log.includes('::error::'));
-
-            if (errorAnnotations) {
-              core.setFailed("Error annotations found in logs!");
-            } else {
-              console.log("No error annotations found.");
-            }
+        run: |
+          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+               -H "Accept: application/vnd.github.v3+json" \
+              "https://api.github.com/repos/marcalexiei/review-dog-languagetool-playground/actions/runs/${{ github.run_id }}/logs"
 
 # name: Spell Checker 2
 
