--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -46,15 +46,17 @@ jobs:
             jq -r ".jobs[] | select(.name == \"$JOB_NAME\") | .id")
 
           # Get logs for the job, including annotations
-          curl -s \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            "https://api.github.com/repos/$REPO/actions/runs/$RUN_ID/jobs/$JOB_ID/logs" \
-            -o job_logs.tar.gz
+          curl -L \
+               -H "Accept: application/vnd.github+json" \
+               -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+               -H "X-GitHub-Api-Version: 2022-11-28" \
+               https://api.github.com/repos/$REPO/actions/runs/$RUN_ID/jobs/$JOB_ID/logs \
+               -o job_logs.zip
 
       - uses: actions/upload-artifact@v4
         with:
           name: my-artifact
-          path: job_logs.tar.gz
+          path: job_logs.zip
 # name: Spell Checker 2
 
 # on: [pull_request]
