--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -1,16 +1,21 @@
 name: Spell Checker 2
 
-on: [pull_request]
+on:
+  push:
+    branches:
+      - main
 
-permissions:
-  checks: write
-  contents: read
-  pull-requests: write
+  pull_request:
 
 jobs:
   spell_checking:
     name: runner / LanguageTools
     runs-on: ubuntu-latest
+
+    permissions:
+      checks: write
+      contents: read
+      pull-requests: write
 
     steps:
       - name: Checkout code
@@ -21,7 +26,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-          reporter: "github-pr-review"
+          reporter: "github-check"
           # Change reporter level if you need.
           level: "error"
           patterns: "**/*.md **/*.txt **/*.mdx"
