--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -28,11 +28,9 @@ jobs:
           FROM_MAIN_REPO: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
         run: |
           echo "EVENT_NAME: $EVENT_NAME FROM_MAIN_REPO: $FROM_MAIN_REPO"
-          if [ "$EVENT_NAME" == 'push' ];
-          then
+          if [ "$EVENT_NAME" == 'push' ]; then
             echo "name=github-check" >> $GITHUB_OUTPUT
-          elif ["$FROM_MAIN_REPO" == 'true'];
-          then
+          elif [ "$FROM_MAIN_REPO" == 'true' ]; then
             echo "name=github-pr-review" >> $GITHUB_OUTPUT
           else
             echo "name=github-pr-annotations" >> $GITHUB_OUTPUT
