--- a/.github/workflows/spell-checking-test.yml
+++ b/.github/workflows/spell-checking-test.yml
@@ -28,26 +28,23 @@ jobs:
           FROM_MAIN_REPO: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
         run: |
           echo "EVENT_NAME: $EVENT_NAME FROM_MAIN_REPO: $FROM_MAIN_REPO"
-          if [ "$EVENT_NAME" == 'push' ];
-          then
+          if [ "$EVENT_NAME" == 'push' ]; then
             echo "name=github-check" >> $GITHUB_OUTPUT
-          elif ["$FROM_MAIN_REPO" == 'true'];
-          then
+          elif [ "$FROM_MAIN_REPO" == 'true' ]; then
             echo "name=github-pr-review" >> $GITHUB_OUTPUT
           else
             echo "name=github-pr-annotations" >> $GITHUB_OUTPUT
           fi
 
       - name: Review dog languagetool
-        run: echo "${{ steps.reporter.outputs.name }}"
-        # uses: reviewdog/action-languagetool@v1
-        # with:
-        #   github_token: ${{ secrets.GITHUB_TOKEN }}
-        #   # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
-        #   reporter: ${{ steps.reporter.outputs.name }}
-        #   # Change reporter level if you need.
-        #   level: "error"
-        #   patterns: "**/*.md **/*.txt **/*.mdx"
-        #   #enabled_categories: 'STYLE,PLAIN_ENGLISH,WHITESPACE_RULE,EN_QUOTES,DASH_RULE,WORD_CONTAINS_UNDERSCORE,UPPERCASE_SENTENCE_START,ARROWS,COMMA_PARENTHESIS_WHITESPACE,UNLIKELY_OPENING_PUNCTUATION,SENTENCE_WHITESPACE,EN_UNPAIRED_BRACKETS,PHRASE_REPETITION,PUNCTUATION_PARAGRAPH_END'
-        #   disabled_categories: ""
-        #   disabled_rules: ""
+        uses: reviewdog/action-languagetool@v1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          # Change reviewdog reporter if you need [github-pr-check,github-check,github-pr-review].
+          reporter: ${{ steps.reporter.outputs.name }}
+          # Change reporter level if you need.
+          level: "error"
+          patterns: "**/*.md **/*.txt **/*.mdx"
+          # enabled_categories: "STYLE,PLAIN_ENGLISH,WHITESPACE_RULE,EN_QUOTES,DASH_RULE,WORD_CONTAINS_UNDERSCORE,UPPERCASE_SENTENCE_START,ARROWS,COMMA_PARENTHESIS_WHITESPACE,UNLIKELY_OPENING_PUNCTUATION,SENTENCE_WHITESPACE,EN_UNPAIRED_BRACKETS,PHRASE_REPETITION,PUNCTUATION_PARAGRAPH_END"
+          disabled_categories: ""
+          disabled_rules: ""
